<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_corners_bg"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <RelativeLayout
        android:id="@+id/upper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/delettexd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blocked_by_developer"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <ImageView
            android:id="@+id/close"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_clear_24" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/my"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upper"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:src="@mipmap/app_icon" />

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:src="@drawable/danger" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/app_name"
                android:textSize="@dimen/_18sdp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/para_one"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/mytext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my"
        android:orientation="vertical">

        <TextView
            android:id="@+id/deletetextt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/para_two"
            android:textSize="@dimen/_15sdp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/relview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mytext"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center"
        android:padding="10dp"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/accept"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="@drawable/curveshape_btn"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/install"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>