<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/round_corners_bg">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/fira_sans_bold"
        android:text="@string/review"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/fira_sans_medium"
        android:gravity="center"
        android:text="@string/support"
        android:textSize="16sp"
        android:textColor="@color/textColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <ImageView
        android:id="@+id/nope"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/not_really"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"/>

    <ImageView
        android:id="@+id/yup"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/yes"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/fira_sans_medium"
        android:text="@string/not_really"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/nope"
        app:layout_constraintStart_toStartOf="@+id/nope"
        app:layout_constraintEnd_toEndOf="@+id/nope"/>

    <TextView
        android:id="@+id/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/fira_sans_medium"
        android:text="@string/yes"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/yup"
        app:layout_constraintStart_toStartOf="@+id/yup"
        app:layout_constraintEnd_toEndOf="@+id/yup"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/yes"/>

</androidx.constraintlayout.widget.ConstraintLayout>