<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/more"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/ic_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#1B2B37" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/fira_sans_bold"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/more"
            app:layout_constraintStart_toEndOf="@+id/more"
            app:layout_constraintTop_toTopOf="@id/more" />

        <AutoCompleteTextView
            android:id="@+id/searchAirport"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:autofillHints="@string/enter_airport_or_city_name"
            android:background="@drawable/search_bar"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/raleway_semi_bold"
            android:hint="@string/enter_airport_or_city_name"
            android:imeOptions="actionSearch"
            android:inputType="textAutoComplete|textAutoCorrect"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/black_medium"
            app:layout_constraintTop_toBottomOf="@+id/more" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_35sdp"
            android:fontFamily="@font/fira_sans_regular"
            android:text="@string/get_airport_schedule"
            android:textColor="@color/teal_700"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/searchAirport"
            app:layout_constraintTop_toBottomOf="@+id/searchAirport"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_2sdp"
        ads:adSize="MEDIUM_RECTANGLE"
        ads:adUnitId="@string/main_rectangle_ad_"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent">
    </com.google.android.gms.ads.AdView>

</androidx.constraintlayout.widget.ConstraintLayout>